mywork/force-app/main/default/objects/CI_Instance__c/CI_Instance__c.object-meta.xml
<CustomObject>
    <label>CI Instance</label>
    <nameField>
        <label>CI Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CI Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>