mywork/force-app/main/default/objects/CI_Instance__c/fields/Pipeline_Order__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Order__c</fullName>
    <label>Pipeline Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>