mywork/force-app/main/default/objects/CI_Instance__c/fields/Pre_Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Pre_Steps_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if pre deployment steps have been executed for this Instance</inlineHelpText>
    <label>Pre-Steps Completed</label>
    <type>Checkbox</type>
</CustomField>