mywork/force-app/main/default/objects/CI_Instance__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>CI Instances</relationshipLabel>
    <relationshipName>CI_Instances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>