mywork/force-app/main/default/objects/CI_Instance__c/fields/Target_Instance__c.field-meta.xml
<CustomField>
    <fullName>Target_Instance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>CI Instances</relationshipLabel>
    <relationshipName>CI_Instances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>